création dossier assets avec ajout images svp et png logo + creation composant logo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"parser": "@babel/eslint-parser",
+	"parser": "@eslint/eslint-parser",
 	"plugins": ["prettier"],
 	"extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
 	"env": { "browser": true, "node": true, "jest": true },
